# phasora

./: .gitignore  pyproject.toml
scripts/aux/: split_green_blue.py
src/phasora/: app.py
src/phasora.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/phasora/core/: channels.py  io.py  phasor.py  selection.py  visualization.py
src/phasora/export/: results.py  statistics.py
src/phasora/models/: session.py
src/phasora/widgets/: dc_histogram_widget.py  dc_image_widget.py  phasor_widget.py  processing_widget.py
src/phasora/windows/: main_window.py
tests/: test_channels.py  test_export.py  test_io.py  test_phasor.py  test_selection.py  test_visualization.py
