[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "phasora"
version = "0.1.0"
description = "Interactive desktop application for phasor analysis"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.0",
    "pyside6>=6.8",
    "pyqtgraph>=0.13",
    "tifffile>=2026.5.2",
    "scikit-image>=0.24",
    "phasorpy>=0.11",
    "aicspylibczi>=3.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[project.scripts]
phasora = "phasora.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"